--- a/views/user/order/checkout.ejs
+++ b/views/user/order/checkout.ejs
@@ -92,7 +92,7 @@
                             </div>
                         </div>
 
-                        <hr class="my-4 border-gray-200"
+                        <hr class="my-4 border-gray-200">
 
                         <!-- Final Amount -->
                         <div class="flex justify-between font-bold text-lg">
