Added the 404 page

--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -17,13 +17,13 @@
       </div>
       <button class="btn btn-bg-info Login_btn" type="submit">Login</button>
     </form>
-    <span>
+    <!-- <span>
       <form action="/admin/login" method="post" class="demo-form">
         <input type="hidden" name="username" value="guest">
         <input type="hidden" name="password" value="Guest@123">
         <button class="btn btn-secondary" type="submit">Demo</button>
       </form>
-    </span>
+    </span> -->
   </div>
 </div>
 
