--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -25,11 +25,11 @@
       </form>
       <p class="or">Or</p>
       <a href="/auth/google" class="btn btn-outline-light" id="google-login"><img src="images/user/google_logo.png" style="width:24px; height:24px">Sign In with Google</a>
-      <form action="/user/login" method="post" class="demo-form">
+      <!-- <form action="/user/login" method="post" class="demo-form">
         <input type="hidden" name="cred" value="vignesh">
         <input type="hidden" name="password" value="User@123">
         <button class="btn btn-secondary" type="submit">Demo</button>
-      </form>
+      </form> -->
       </div>
 
     <div class="signUp-box" id="signUp-box">
