--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -16,6 +16,7 @@
     <title>
         <%= typeof title !=='undefined' ? title : 'Craftora' %>
     </title>
+    <link rel="icon" href="/images/C_favicon.avif" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.tailwindcss.com"></script>
