--- a/views/admin/coupon folder/coupons.ejs
+++ b/views/admin/coupon folder/coupons.ejs
@@ -102,7 +102,8 @@
                                                     <%= coupon.name %>
                                                 </div>
                                                 <div class="text-sm text-gray-500">
-                                                    <%= coupon.description %>
+                                                    <%= coupon.description.substring(0,25) %>
+                                                    <%= coupon.description.length>25 ? '...' : '' %>
                                                 </div>
                                             </td>
                                             <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
